# Lem_in_my

./: CMakeLists.txt  Makefile  README.md  ft_free.c  ft_parsing.c  main.c  test
inc/: error_message.h  lem_in.h
lib/Libft/inc/: get_next_line.h  libft.h
lib/Libft/src/: ft_atoi.c  ft_bilstadd.c  ft_bilstadd_back.c  ft_bilstdel.c  ft_bilstdelone.c  ft_bilstnew.c  ft_bilstsort.c  ft_bzero.c  ft_count_words.c  ft_del.c  ft_error.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstdel_pos.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  (+30 more)
src/: bilst_length_cmp.c  find_solutions.c  ft_free.c  ft_parsing.c  init.c  main.c  print_result.c
